Update Style Portofolio

--- a/Portofolio.html
+++ b/Portofolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
+    <title>Portofolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,6 +14,8 @@
   </head>
 
   <body>
+    <link rel="STUDIO" href="Portofolio.html" />
+    <a href="Portofolio.html" class="logo">WEB</a>
     <nav class="main-nav">
       <ul>
         <li>
@@ -29,91 +31,135 @@
     </nav>
     <main>
         <section>
-            <button type="button">All</button>
-            <button type="button">Web Site</button>
-            <button type="button">App</button>
-            <button type="button">Design</button>
-            <button type="button">Marketing</button>
+          <button type="button" class="button-first">All</button>
         </section>
+        <ul>
+            <li>
+              <button type="button" class="button-website">Web Site</button>
+            </li>
+        </ul>
+        <ul>
+          <li>
+            <button type="button" class="button-app">App</button>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <button type="button" class="button-designe">Design</button>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <button type="button" class="button-marketing">Marketing</button>
+          </li>
+        </ul>
         <sections>
             <div>
-                <img
-                src="./images/img (12).jpg"
-                alt="App"
-                width="360px"
-                height="300px"
-            />
-            <h3>Banking App Interface Concept</h3>
-            <p>APP</p>
+              <img
+              src="./images.portofolio/img (12).jpg"
+              alt="Banking App Interface Concept"
+              width="360px"
+              height="300px"
+              />
+              <h3>Banking App Interface Concept</h3>
+              <p>APP</p>
             </div>
-            <img
-              src="./images/img (13).jpg"
+            <div>
+              <img
+              src="./images.portofolio/img (13).jpg"
               alt="Cashless Payment"
               width="360px"
               height="300px"
-              border="1px"
-            />
-            <img
-              src="./images/Mobile Phone.jpg"
-              alt="Mobile Phone"
+              />
+              <h3>Cashless Payment</h3>
+              <p>Marketing</p>
+            </div>
+            <div>
+              <img
+              src="./images.portofolio/img (5).jpg"
+              alt="Meditation App"
               width="360px"
               height="300px"
-              border="1px"
-            />
-          </li>
-        </ul>
-        </sections>
-        <section>
-        <h2>Our Team</h2>
-        <div>
-          <img
-            src="images/img (4).jpg"
-            alt="Mark Guerrero - Product Designer"
-            width="264px"
-            height="260px"
-          />
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
-        </div>
-        <div>
-          <img
-            src="images/img (1) (1).jpg"
-            alt="Tom Ford - Frontend Developer"
-            width="264px"
-            height="260px"
-          />
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
-        </div>
-        <div>
-          <img
-            src="images/img (2) (1).jpg"
-            alt="Camila Garcia - Marketing"
-            width="264px"
-            height="260px"
-          />
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
-        </div>
-        <div>
-          <img
-            src="images/img (3) (1).jpg"
-            alt="Daniel Wilson - UI Designer"
-            width="264px"
-            height="260px"
-          />
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
-        </div>
-      </section>
-    </main>
-
+              />
+              <h3>Meditation App</h3>
+              <p>APP</p>
+            </div>
+       </sections>
+       <sections>
+            <div>
+              <img
+              src="./images.portofolio/img (8).jpg"
+              alt="Taxi Service"
+              width="360px"
+              height="300px"
+              />
+              <h3>Taxi Service</h3>
+              <p>Marketing</p>
+            </div>
+            <div>
+              <img
+              src="./images.portofolio/img (7).jpg"
+              alt="Screen Illustrations"
+              width="360px"
+              height="300px"
+              />
+              <h3>Screen Illustrations</h3>
+              <p>Design</p>
+            </div>
+            <div>
+              <img
+              src="./images.portofolio/img (6).jpg"
+              alt="Online Courses"
+              width="360px"
+              height="300px"
+              />
+              <h3>Online Courses</h3>
+              <p>Marketing</p>
+            </div>
+       </sections>
+       <sections>
+            <div>
+              <img
+              src="./images.portofolio/img (9).jpg"
+              alt="Instagram Stories Concept"
+              width="360px"
+              height="300px"
+              />
+              <h3>Instagram Stories Concept</h3>
+              <p>Design</p>
+            </div>
+            <div>
+              <img
+              src="./images.portofolio/img (10).jpg"
+              alt="Organic Food"
+              width="360px"
+              height="300px"
+              />
+              <h3>Organic Food</h3>
+              <p>Web Site</p>
+            </div>
+            <div>
+              <img
+              src="./images.portofolio/img (11).jpg"
+              alt="Fresh Coffee"
+              width="360px"
+              height="300px"
+              />
+              <h3>Fresh Coffee</h3>
+              <p>Web Site</p>
+            </div>
+       </sections>
+      </main>
     <footer>
-      <logo>WebStudio</logo><br />
-      <span
-        >Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.</span
-      >
+        <section class="global-footer">
+        <link rel="STUDIO" href="index.html" />
+        <a href="index.html" class="logo-footer">WEB</a>
+        <br />
+        <span class="footer-title"
+          >Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </span>
+      </section>
     </footer>
     </main>
   </body>
