--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
+    <title>Studio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,7 +15,9 @@
 
   <body>
     <header class="global-header">
-      <logo>WebStudio</logo><br />
+      <link rel="STUDIO" href="index.html" />
+      <a href="index.html" class="logo">WEB</a>
+
       <nav class="main-nav">
         <ul>
           <li>
@@ -35,8 +37,8 @@
 
     <main>
       <sections class="hero-section">
-        <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
-        <button type="button">Order Service</button>
+        <h1 class="hero-title">EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
+        <button type="button" class="button-servise">Order Service</button>
       </sections>
       <sections>
         <ul>
@@ -79,21 +81,18 @@
               alt="Screen"
               width="360px"
               height="300px"
-              border="1px"
             />
             <img
               src="./images/Apps.jpg"
               alt="Apps"
               width="360px"
               height="300px"
-              border="1px"
             />
             <img
               src="./images/Mobile Phone.jpg"
               alt="Mobile Phone"
               width="360px"
               height="300px"
-              border="1px"
             />
           </li>
         </ul>
@@ -144,11 +143,15 @@
     </main>
 
     <footer>
-      <logo>WebStudio</logo><br />
-      <span
-        >Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.</span
-      >
+      <section class="global-footer">
+        <link rel="STUDIO" href="index.html" />
+        <a href="index.html" class="logo-footer">WEB</a>
+        <br />
+        <span class="footer-title"
+          >Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </span>
+      </section>
     </footer>
   </body>
 </html>
