Update Style Portofolio

--- a/Portofolio.html
+++ b/Portofolio.html
@@ -12,7 +12,6 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
     <link rel="STUDIO" href="Portofolio.html" />
     <a href="Portofolio.html" class="logo">WEB</a>
@@ -30,9 +29,11 @@
       </ul>
     </nav>
     <main>
-        <section>
-          <button type="button" class="button-first">All</button>
-        </section>
+        <ul>
+          <li>
+            <button type="button" class="button-all">All</button>
+          </li>
+        </ul>
         <ul>
             <li>
               <button type="button" class="button-website">Web Site</button>
@@ -84,8 +85,8 @@
               <h3>Meditation App</h3>
               <p>APP</p>
             </div>
-       </sections>
-       <sections>
+        </sections>
+        <sections>
             <div>
               <img
               src="./images.portofolio/img (8).jpg"
@@ -116,8 +117,8 @@
               <h3>Online Courses</h3>
               <p>Marketing</p>
             </div>
-       </sections>
-       <sections>
+        </sections>
+        <sections>
             <div>
               <img
               src="./images.portofolio/img (9).jpg"
@@ -148,19 +149,19 @@
               <h3>Fresh Coffee</h3>
               <p>Web Site</p>
             </div>
-       </sections>
+        </sections>
       </main>
-    <footer>
-        <section class="global-footer">
-        <link rel="STUDIO" href="index.html" />
-        <a href="index.html" class="logo-footer">WEB</a>
-        <br />
-        <span class="footer-title"
-          >Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </span>
-      </section>
-    </footer>
+        <footer>
+          <section class="global-footer">
+            <link rel="STUDIO" href="index.html" />
+            <a href="index.html" class="logo-footer">WEB</a>
+            <br />
+            <span class="footer-title"
+              >Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+           </span>
+          </section>
+        </footer>
     </main>
   </body>
 </html>
